click on arrows to expand collapse tree. ie bug fix caused other issues - reverted.

--- a/pat-ui/css/saiku/src/styles.css
+++ b/pat-ui/css/saiku/src/styles.css
@@ -270,6 +270,7 @@ html, body {
 }
 .dtree li,
 .mtree li {
+    cursor: pointer;
     line-height: 20px;
     list-style-type: none;
     margin: 0;
